--- a/section1/6. 내장함수로 최소값,최대값 구하기/question.html
+++ b/section1/6. 내장함수로 최소값,최대값 구하기/question.html
@@ -9,15 +9,8 @@
 <body>
     <script>
         function solution(arr){
-                //Number.MAX_SAFE_INTEGER 는 안전한 최대 값
-                //Number.MIN_SAFE_INTEGER 는 안전한 최소 값
-                let answer, min=Number.MAX_SAFE_INTEGER;
-                for(i = 0; i < arr.length; i++){
-                    if(min > arr[i]){
-                        min = arr[i];
-                    }
-                    answer = min;
-                }
+                let answer = Math.min(...arr); // 최소값 구하기
+                // let answer = Math.max(...arr); 최대값 구하기
                 return answer;
             }
             let arr=[5, 7, 1, 3, 2, 9, 11];
