--- a/section2/2. 보이는 학생/question.html
+++ b/section2/2. 보이는 학생/question.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>큰수 출력하기</title>
+    <title>보이는 학생</title>
 </head>
 <body>
     <script>
         function solution(arr){         
-            let answer=[];
-            answer.push(arr[0]);
-            for(i = 1; i < arr.length; i++){
-                if(arr[i] > arr[i - 1]){
-                    answer.push(arr[i])
+            let answer=1;
+            let lowerHeight = arr[0];
+            for(i = 1; i<arr.length; i++){
+                if(lowerHeight < arr[i]){
+                    answer++;
+                    lowerHeight = arr[i]
                 }
             }
             return answer;
         }
 
-        let arr=[7, 3, 9, 5, 6, 12];
+        let arr=[130, 135, 148, 140, 145, 150, 150, 153];
         console.log(solution(arr));
     </script>
 </body>
