--- a/section2/4. 점수 계산/question.html
+++ b/section2/4. 점수 계산/question.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,4 +25,4 @@
         console.log(solution(arr));
     </script>
 </body>
-</htm
+</html>
